# rally-mos-nodes-plugin

./: README.md  requirements.txt  setup.cfg
mos_nodes/context/: cloud_recovery_context.py  ssh_cloud.py
mos_nodes/runners/: constant_with_break.py
mos_nodes/scenarios/: controller_disaster.py  controllers.py  service_disaster.py  services.py
nodes/: exceptions.py  helpers.py  objects.py
nodes/host_actions/: base.py  general_client.py  pacemaker_client.py  utils.py
nodes/objects/: cluster.py  host.py
nodes/transport/: base.py  ssh_transport.py
samples/: hard_reboot_controller_with_management_vip.json  hard_reboot_controller_with_publuc_vip.json  hard_reboot_controller_with_rabbitmq_master.json  one_random_controller_hard_reboot.json  one_random_controller_soft_reboot.json  soft_reboot_controller_with_management_vip.json  soft_reboot_controller_with_publuc_vip.json  soft_reboot_controller_with_rabbitmq_master.json  three_random_controllers_hard_reboot.json  three_random_controllers_soft_reboot.json  two_random_controllers_hard_reboot.json
samples/controllers_nova/: one_random_controller_hard_reboot.json  soft_reboot_controller_with_publuc_vip.json  three_random_controllers_soft_reboot.json
samples/nodes/: hard_reboot_controller_with_management_vip.json  hard_reboot_controller_with_rabbitmq_master.json  one_random_controller_hard_reboot.json  soft_reboot_controller_with_publuc_vip.json  three_random_controllers_soft_reboot.json  two_random_controllers_hard_reboot.json
samples/services/: kill_nova_compute.json  kill_rabbitmq_master.json  (+1 more)
(+3 files in other folders)
